Squashed commit of the following:
commit cef4effd45aac52d007f660b797f4bf4cf59c231
Author: Dave Boulton <dave_boulton@ntlworld.com>
Date:   Mon Mar 18 12:56:55 2019 +0000

    Refactor using mocker to enable more of the module code to be covered by tests

commit 029a7fa4f55f5fccc022ab5436fd9403b92155d0
Author: Dave Boulton <dave_boulton@ntlworld.com>
Date:   Mon Mar 18 12:56:19 2019 +0000

    Update some tests correctly after changing the details of a mocked function

commit 21db3375ec998951359de39adf00bc4f71c404c1
Author: Dave Boulton <dave_boulton@ntlworld.com>
Date:   Mon Mar 18 12:55:16 2019 +0000

    Minor changes to output

commit 85ba15411627ed600e2c4d5767dbf9a6f2938764
Author: Dave Boulton <dave_boulton@ntlworld.com>
Date:   Mon Mar 18 12:54:45 2019 +0000

    Add optional timestamp, display all and exit immediately if more than one device given

commit 5f3eaff5f612c058be0ae59fbf326a78ed23101b
Author: Dave Boulton <dave_boulton@ntlworld.com>
Date:   Mon Mar 18 12:53:42 2019 +0000

    Fix default name for monitor command

commit cbfee7360450fcf5ea76daec6c72c5d50fc11b67
Author: Dave Boulton <dave_boulton@ntlworld.com>
Date:   Mon Mar 18 12:53:03 2019 +0000

    Trap Ctrl-C and exit more quietly

commit 1cdd1ca516ab83bd075fa795cde7252e6525cea8
Author: Dave Boulton <dave_boulton@ntlworld.com>
Date:   Sun Mar 17 18:25:16 2019 +0000

    Add bulk of testing, including code coverage

commit 14be19ddf42fb1192fcd7f896c048a91bc148b0b
Author: Dave Boulton <dave_boulton@ntlworld.com>
Date:   Sat Mar 16 17:00:18 2019 +0000

    Add devpi client to manage test releases

commit 162ccc8207edb401bc0cc5ced0fe2ed05685309a
Author: Dave Boulton <dave_boulton@ntlworld.com>
Date:   Sat Mar 16 16:59:43 2019 +0000

    Add initial test framework

commit 17fb49aad0ef6a6cc39ada540d287964895a45cb
Author: Dave Boulton <dave_boulton@ntlworld.com>
Date:   Sat Mar 16 14:34:35 2019 +0000

    Prevent root from creating files in user area

commit 63bb6a8c1d08ded7a5484561671de538c761fb21
Au

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,36 @@
-meross-iot
-paho-mqtt
+apipkg==1.5
+argcomplete==1.9.4
+atomicwrites==1.3.0
+attrs==19.1.0
+certifi==2019.3.9
+chardet==3.0.4
+check-manifest==0.37
+coverage==4.5.3
+devpi-client==4.3.0
+devpi-common==3.3.1
+entrypoints==0.3
+execnet==1.5.0
+filelock==3.0.10
+flake8==3.7.7
+idna==2.8
+mccabe==0.6.1
+meross-iot==0.1.4.3
+more-itertools==6.0.0
+paho-mqtt==1.4.0
+pep8==1.7.1
+pkginfo==1.5.0.1
+pluggy==0.9.0
+py==1.8.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pytest==4.3.1
+pytest-cache==1.0
+pytest-cov==2.6.1
+pytest-mccabe==0.1
+pytest-pep8==1.0.6
+requests==2.21.0
+six==1.12.0
+toml==0.10.0
+tox==3.7.0
+urllib3==1.24.1
+virtualenv==16.4.3
