--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pytest==4.3.1
 pytest-cache==1.0
 pytest-cov==2.6.1
 pytest-mccabe==0.1
+pytest-mock==1.10.1
 pytest-pep8==1.0.6
 requests==2.21.0
 six==1.12.0
