--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = --ignore=venv --ignore=meross_powermon/iwlist --pep8 --cov=meross_powermon --cov-report=html --cov-report=xml --cov-fail-under=95 --junit-xml=test_results.xml
+addopts = --ignore=venv --ignore=meross_powermon/iwlist.py --pep8 --cov=meross_powermon --cov-report=html --cov-report=xml --cov-fail-under=95 --junit-xml=test_results.xml
 pep8maxlinelength = 90
 mccabe-complexity = 10
